support for FireCloud-Agora ACL translation
